[package]
name = "tiny_redis"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiny_redis"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
redis = "0.22.2"

[[bench]]
name = "main"
harness = false
