[package]
name = "tiny_redis"
version = "0.1.0"
edition = "2021"
default-run = "tiny_redis"

[lib]
name = "tiny_redis"
path = "src/lib.rs"

[[bin]]
name = "redis_benchmark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1"

[dev-dependencies]
redis = "0.22.2"
rand = "0.8.5"
serial_test = "1.0.0"

[[bench]]
name = "main"
harness = false
